--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^2.1.0",
     "add": "^2.0.6",
+    "dayjs": "^1.8.17",
     "react": "16.9.0",
     "react-native": "0.61.3",
     "react-native-elements": "^1.2.7",
